sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: not found: value c
  c=getValueCount()
  ^AlgBubbleSort2:7: error: not found: value c
    for (i<-0 to c){
                 ^AlgBubbleSort2:13: error: not found: value c
      c=c-1
      ^