sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var swapped= false
  c=getValueCount()
  do {
    swapped=false;
    for (i<-0 to c){
      if (!isSmaller(i,i+1)) {
        swap(i,i+1);
        swapped= true
        
      }
      c=c-1
    }
    
  }while (swapped);
}